--- a/index.html
+++ b/index.html
@@ -31,21 +31,19 @@
           </div>
         </div>
       </div>
-        <div class="about" id="about">
-          <span>ABOUT</span>
+         <div class="about__section">
+    <div class="text-left">
+        <span>About</span>
+    </div>
+    <div class="image-two">
+        <img src="img/Новости4.png">
+    </div>
+    <div class="text-one">
+        <span>MOAA is a Hamilton-based studio of architectural professionals driven by an ethos to deliver progressive projects for ambitious clients, both in New Zealand and abroad.</span>
+        <a class="text-one" href="">More Info</a>
+    </div>
+   </div>
 
-          <img class="about__img" src="./image/about.jpg" alt="" width="200px" height="200px" />
-          <div class="about__info">
-            <span>
-              MOAA is a Hamilton-based studio of architectural professionals
-              driven by an ethos to deliver progressive projects for ambitious
-              clients, both in New Zealand and abroad.
-              <div>
-                <a href="">More info 🡥</a>
-              </div>
-            </span>
-          </div>
-        </div>
 
         <div class="projects" id="projects">
           <span>PROJECTS</span>
