--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span>About</span>
     </div>
     <div class="image-two">
-        <img src="image/about.jpg">
+        <img src="./image/about.jpg">
     </div>
     <div class="text-one">
         <span>MOAA is a Hamilton-based studio of architectural professionals driven by an ethos to deliver progressive projects for ambitious clients, both in New Zealand and abroad.</span>
