--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css.css" />
   </head>
   <body>
-    <div class="container">
+  <header>
       <div class="header">
         <div class="header__logo">
           <span>MOAA</span><br />
@@ -31,6 +31,8 @@
           </div>
         </div>
       </div>
+      </header>
+  <main>
         <div class="about" id="about">
           <span>ABOUT</span>
 
@@ -116,8 +118,8 @@
             </span>
           </div>
         </div>
-      
     </div>
+    </main>
     <footer>
       <div class="footer">
         <div class="container">
